# vcjsondb

./: .cursorrules  CMakeLists.txt  README.md  main.cpp  utils.cpp  utils.h  vcjsondb.rc
.github/workflows/: windows.yml
